--- a/lib/yourbot_web/templates/user_registration/new.html.heex
+++ b/lib/yourbot_web/templates/user_registration/new.html.heex
@@ -15,12 +15,17 @@
   <%= password_input f, :password, required: true %>
   <%= error_tag f, :password %>
 
+  <%= if @discord_oauth.id do %>
+    <%= hidden_input f, :discord_oauth, value: @discord_oauth.id %>
+  <% end %>
+  
   <div>
     <%= submit "Register" %>
   </div>
 </.form>
 
 <p>
+  <%= link "Log in with Discord", to: YourBotWeb.OAuth.Discord.login_url %> |
   <%= link "Log in", to: Routes.user_session_path(@conn, :new) %> |
   <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
 </p>
