--- a/lib/yourbot_web/templates/layout/_user_menu.html.heex
+++ b/lib/yourbot_web/templates/layout/_user_menu.html.heex
@@ -2,11 +2,8 @@
 <%= if @current_user do %>
   <li><%= @current_user.email %></li>
   <%= live_patch "Manage Bots", to: Routes.bot_url(@conn, :index) %>
-  <li><%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
   <li><%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete %></li>
 <% else %>
-  <li><%= link "Register", to: Routes.user_registration_path(@conn, :new) %></li>
-  <li><%= link "Log in", to: Routes.user_session_path(@conn, :new) %></li>
-  <li><%= link "Register with Discord", to: YourBotWeb.OAuth.Discord.login_url %></li>
+  <li><%= link "Login with Discord", to: YourBotWeb.OAuth.Discord.login_url %></li>
 <% end %>
 </ul>
