--- a/lib/yourbot_web/templates/user_session/new.html.heex
+++ b/lib/yourbot_web/templates/user_session/new.html.heex
@@ -22,7 +22,5 @@
 </.form>
 
 <p>
-  <%= link "Log in with Discord", to: YourBotWeb.OAuth.Discord.login_url %> |
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
+  <%= link "Log in with Discord", to: YourBotWeb.OAuth.Discord.login_url %>
 </p>
