--- a/lib/yourbot_web/templates/page/index.html.heex
+++ b/lib/yourbot_web/templates/page/index.html.heex
@@ -1,41 +1,12 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>Peace of mind from prototype to production</p>
-</section>
-
-<section class="row">
-  <article class="column">
-    <h2>Resources</h2>
-    <ul>
-      <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.6/CHANGELOG.md">v1.6 Changelog</a>
-      </li>
-    </ul>
-  </article>
-  <article class="column">
-    <h2>Help</h2>
-    <ul>
-      <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://web.libera.chat/#elixir">#elixir on Libera Chat (IRC)</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-      <li>
-        <a href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a>
-      </li>
-      <li>
-        <a href="https://discord.gg/elixir">Elixir on Discord</a>
-      </li>
-    </ul>
-  </article>
+  <h1> Welcome to Your Bot </h1>
+  <p>
+    <%= link "YourBot", to: Routes.url(@conn) %> is a sandbox environment for easily developing
+    and deploying <%= link "Discord bot", to: "https://discord.com/developers/docs/intro" %> using
+    the <%= link "Python", to: "https://www.python.org/" %> programming language and
+    the briliant <%= link "Discord Py", to: "https://discordpy.readthedocs.io/en/stable/" %> library.
+  </p>
+  <p>
+    If you want to get started, you should probably check out our <%= link "Discord Server", to: "https://discord.gg/fC9ahTpGMz" %>
+  </p>
 </section>
