--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,47 @@
 /* This file is for your main application CSS */
 @import "./phoenix.css";
 
+html, body, .rb {
+  margin: 0;
+  height: 100%;
+}
+
+.rb {
+  display: table;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.top, .myME {
+  display: table-row;
+}
+
+.buffer {
+  display: table-cell;
+}
+
+.top .buffer {
+  background: lightblue;
+  height:1%;
+}
+
+#container {
+  position:relative;
+}
+
+#container > * {
+  overflow:auto;
+  max-width:100%;
+  max-height:100%;
+}
+
+.fullcolumn {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  min-height: 80vh;
+}
+
 /* Alerts and form errors used by phx.new */
 .alert {
   padding: 15px;
